// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Button - test Button Primary - snapshot 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "rgb(0, 122, 255)",
      "borderColor": "rgb(28, 28, 30)",
      "borderRadius": 10,
      "borderWidth": 2,
      "justifyContent": "center",
      "maxWidth": "90%",
      "minHeight": 48,
      "minWidth": "30%",
      "opacity": 1,
      "padding": 0,
      "paddingLeft": 20,
      "paddingRight": 20,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "margin": 0,
        "minHeight": 48,
        "minWidth": 48,
        "padding": 0,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgb(242, 242, 242)",
          "fontSize": 16,
          "fontWeight": "bold",
          "textAlign": "center",
          "textTransform": "uppercase",
        }
      }
    >
      Primary
    </Text>
  </View>
</View>
`;

exports[`Component Button - test Button Secondary - snapshot 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "rgb(242, 242, 242)",
      "borderColor": "rgb(0, 122, 255)",
      "borderRadius": 10,
      "borderWidth": 2,
      "justifyContent": "center",
      "maxWidth": "90%",
      "minHeight": 48,
      "minWidth": "30%",
      "opacity": 1,
      "padding": 0,
      "paddingLeft": 20,
      "paddingRight": 20,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "margin": 0,
        "minHeight": 48,
        "minWidth": 48,
        "padding": 0,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgb(0, 122, 255)",
          "fontSize": 16,
          "fontWeight": "bold",
          "textAlign": "center",
          "textTransform": "uppercase",
        }
      }
    >
      Secondary
    </Text>
  </View>
</View>
`;
